[package]
name = "timr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.17", default-features = false, features = ['termion'] }
clap = { version = "3.1.1", features = ["derive"] }
crossbeam = "0.8.1"
termion="1.5"
futures = "0.3"
